--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
           />
         </div>
         <div class="flexbox">
-          <input type="text" placeholder="Phone number, username, or email" />
-          <input type="password" placeholder="Password" />
+          <input type="text" placeholder="Phone number, username, or email" style="width: 210px;" />
+          <input type="password" placeholder="Password" style="width: 210px;"/>
           <button type="button">Log In</button>
           <div class="linijyte">OR</div>
-          <div class="fb">
+          <div class="fb" style="padding: 0 0 10px 0;">
             <a href="https://www.facebook.com">Log in with Facebook</a>
           </div>
-          <div>
-            <a href="">Forgot password?</a>
+          <div class="forgot" style="padding: 0 0 10px 0;">
+            <a  href="">Forgot password?</a>
           </div>
         </div>
-        <div class="visas">Don't have an account? <a href="">Sign up</a></div>
-        <div class="visas">
+        <div class="visas" style="padding: 5px 0 10px 0;">Don't have an account? <a href="">Sign up</a></div>
+        <div class="visas" style="padding: 10px 0;">
           Get the app.
           <div class="nualio">
             <div>
